--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
-  background-color: bisque;
+  background-color: rgb(165, 255, 225); /*cambio realizado por Carolina*/
   padding: 20px;
 }
 
